Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1598,7 +1598,7 @@
  flavor_fra.EVTNAME3003:0 "外国軍の介入"
  flavor_fra.EVTDESC3003:0 "[From.GetName]の[From.Monarch.GetTitle][From.Monarch.GetName]は、フランスの宗教戦争に大いに関心を持っており、異端者を根絶するための闘いを支援するため、兵士の一団を我々に派遣してきた。"
  flavor_fra.EVTOPTA3003:0 "彼らに祝福を！"
- flavor_fra.EVTNAME3002:0 "フランスの宗教戦争"
+ flavor_fra.EVTNAME3002:0 "フランスの宗教的内戦"
  flavor_fra.EVTDESC3002:0 "フランスは何年もの間、[FRA.Religion.GetName]の[FRA.Monarch.GetTitle][FRA.Monarch.GetName]と宗教的少数派との間の一連の宗教内戦によって引き裂かれている。この機会に[FRA.GetName]への支援を示す必要があるだろうか？あるいは、少数派の側に介入すべきだろうか？"
  flavor_fra.EVTOPTA3002:0 "フランスを支援するため軍隊を派遣。"
  flavor_fra.EVTOPTB3002:0 "フランスと戦うため軍隊を派遣。"
@@ -3629,7 +3629,7 @@
  flavor_kon.2.a:0 "良い知らせだ！"
  flavor_kon.3.t:0 "宣教師ははねつけられた！"
  flavor_kon.3.d:0 "コンゴ王国の野蛮なマニコンゴは我々の宣教師を鞭打ち、屈辱を与えた！偶像崇拝者たちはキリストを侮辱するだけでなく、我々の力を嘲笑っている。ポルトガルと聖母教会へのこの侮辱に対して、復讐しなければならない。"
- flavor_kon.3.a:0 "We shall wipe the dust.. on them."
+ flavor_kon.3.a:0 "彼らを…掃除しなければなるまい。"
  flavor_kon.4.t:0 "コンゴの王が改宗！"
  flavor_kon.4.d:0 "今日、ポルトガル人の司祭が横に並ぶ中で、偉大なマニコンゴである$MONARCH$は、キリスト教徒として新たに生まれ変わったことを宣言した。彼が偶像崇拝者と呼んだ祖先の信仰を否定した我々の支配者は、カトリック信仰の全面的な採択、恒久的な教区司教、古い神の偶像の破壊、そして伝統的な生活様式の終焉を求めている。既に怒っているコンゴの長老たちは、王の首を刎ね、古い秩序の回復を求めている。いずれにしても、我が国は大きな不穏な時期にある。"
  flavor_kon.4.a:0 "キリスト教はコンゴで勝利するだろう！"
@@ -3912,7 +3912,7 @@
  randomeventsstapehordes.13.EVTOPTA:0 "息子は父親と行動を共にするものだ。"
  randomeventsstapehordes.14.EVTNAME:0 "定着しない遊牧民たち"
  randomeventsstapehordes.14.EVTDESC:0 "現在の平和の状態と、氏族全体の襲撃と略奪の不足にひどく怒り、多くが高度に経験豊富な戦士と猟師たちで構成された氏族は、我々の群れを離れ、代わりに隣国の一つに加わった。"
- randomeventsstapehordes.14.EVTOPTA:0 "Traitorous scum!"
+ randomeventsstapehordes.14.EVTOPTA:0 "不忠なクズどもめ！"
  randomeventsstapehordes.15.EVTNAME:0 "希望の星"
  randomeventsstapehordes.15.EVTDESC:0 "部族の指導者の一人が、最近の戦闘競技の大会で兵士として素晴らしい技能を披露した。多くの同じ氏族の者は、彼が我々の群れを率いる素晴らしい将軍となるだろうことを示唆している。我々は昇進を発表すべきだろうか？"
  randomeventsstapehordes.15.EVTOPTA:0 "非常に素晴らしい考えだ。"
@@ -4681,7 +4681,7 @@
  flavor_rus.EVTOPTB2002:0 "代わりに[Root.Capital.GetName]を改善せよ"
  flavor_tib.EVTNAME2:0 "ハーンとの面会"
  flavor_tib.EVTDESC2:0 "ダライ・ラマは、まるで訓練されたマスティフであるかのように多数集結した小ハーンに関心を示しています。ダライ・ラマは、彼らに通じる事で彼のチベット支配が確保されることを知っており、彼はどうするかをただ選択するだけです。最も安全な選択は、チベット仏教、特に菩薩の生まれ変わりである彼自身の身体について全力を尽くして守る保証をハーンとの交渉で求め、確保する事です。\nまた、悟りを開いた修道僧は、より急進的な方法を思いつきました。もし、ダライ・ラマがハーンの一人を招致して、彼の傀儡として統治させれば、彼はチベットの意見の合わない貴族の一族からの抵抗を恐れる必要は完全になくなります。影からの統治は一定度の魅力を持ちます。\nダライ・ラマは、ヴェールに包んだ野心を見せないよう、穏やかに微笑みながら、意向を伝えるため、ハーンの方に向きます。"
- flavor_tib.EVTOPTA2:0 "Establish a rapport with the nomads."
+ flavor_tib.EVTOPTA2:0 "遊牧民との協力関係を確立せよ。"
  flavor_tib.EVTOPTB2:0 "統治のため、ハルハのモンゴル族を招致せよ。"
  flavor_tib.EVTOPTC2:0 "統治のため、ホシュートのオイラト族を招致せよ。"
  flavor_tib.EVTOPTD2:0 "統治のため、ジュンガルのオイラト族を招致せよ。"
