--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -215,9 +215,9 @@
  zabt_reform_desc:0 "行政の浸透は、この地域内のどんな帝国にとっても最大の障害となっている。経済生産性を奨励することは国家の利益のためとなり、このことを常に心に留めて置かねばならず、また同時に地域経済を常に注視せねばならない。我々が目標とする数多くの臣民を簡単に管理する方法はないので、この問題を解決するには、大量の資源と約束事が必要だ。\n土地や作物栽培、土地収入、地方経済に関する定期的な土地測量を行う行政を作ろう。さらに、常に全臣民に現金払いを要求し、現地経済の奨励を必要とする際はより軽減された課税を提供せねばならない。"
  FEDERAL_KINGDOM:0 "連邦王国"
  FEDERAL_EMPIRE:0 "連邦帝国"
- mechanic_enables_plutocratic_idea_group_yes:0 "富豪アイデアを許可"
+ mechanic_enables_plutocratic_idea_group_yes:0 "富豪アイデアを許可する。"
  mechanic_enables_plutocratic_idea_group_no:0 "富豪アイデアを不許可"
- mechanic_enables_aristocratic_idea_group_yes:0 "貴族アイデアを許可"
+ mechanic_enables_aristocratic_idea_group_yes:0 "貴族アイデアを許可する。"
  mechanic_enables_aristocratic_idea_group_no:0 "貴族アイデアを不許可"
  mechanic_allow_convert_yes:0 ""
  mechanic_allow_convert_no:1 ""
@@ -273,13 +273,13 @@
  statists_MECHANIC_TOOLTIP:0 "議会派"
  orangists_MECHANIC_TOOLTIP:0 "オラニエ派"
  monarchists_MECHANIC_TOOLTIP:0 "君主派"
- mechanic_allow_vassal_war_yes:0 "属国同士の戦争を許可します"
- mechanic_allow_vassal_war_no:0 "属国同士の戦争を許可しません"
- mechanic_allow_vassal_alliance_yes:0 "属国同士の同盟を許可します"
- mechanic_allow_vassal_alliance_no:0 "属国同士の同盟を許可しません"
+ mechanic_allow_vassal_war_yes:0 "属国同士の戦争を許可する。"
+ mechanic_allow_vassal_war_no:0 "属国同士の戦争を許可しない。"
+ mechanic_allow_vassal_alliance_yes:0 "属国同士の同盟を許可する。"
+ mechanic_allow_vassal_alliance_no:0 "属国同士の同盟を許可しない。"
  mechanic_min_autonomy:0 "最低自治率は$VALUE$"
- mechanic_royal_marriage_yes:0 "王室間の婚姻を許可する"
- mechanic_royal_marriage_no:0 "王室間の婚姻を許可しない"
+ mechanic_royal_marriage_yes:0 "王室間の婚姻を許可する。"
+ mechanic_royal_marriage_no:0 "王室間の婚姻を許可しない。"
  mechanic_nomad_yes:0 "遊牧民である"
  republic_desc:0 "共和国は市民によって支配される国です。権力は継承されず、代わりに選出された首長の手腕が継承されます。"
  theocracy_desc:0 "神権政治の権威は神の力から導かれる。支配階級はしばしば聖職者自身であり、国家元首が彼らの指導者である。"
