--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -494,7 +494,7 @@
  gen_eur_defender_faith_desc:0 "異端を許容してはならない。[Root.Religion.GetName]教会は道を照らすため、敬虔な模範となる人物が必要である。"
  gen_hre_electors_title:0 "帝国の野望"
  gen_hre_electors_desc:0 "神聖ローマ帝国のあらゆる君主と同様に、我々は王座に目を向ける。我々は、選帝侯から何らかの支援を得る必要がある。"
- gen_hre_electors.tooltip:2 "人の選帝侯が§Y[Root.GetName]§!が皇帝となることを支持している。"
+ gen_hre_electors.tooltip:2 "の選帝侯が§Y[Root.GetName]§!が皇帝となることを支持している。"
  gen_hre_emperor_title:0 "シャルルマーニュの遺産"
  gen_hre_emperor_desc:1 "太古の時代、カロリング朝の王は偉大な神聖ローマ帝国を統治した。彼らの遺産は忘れられておらず、野心もまたそうである。我々は皇帝を戴冠させる必要がある。"
  gen_hre_imperial_ban_title:0 "帝国の守護"
@@ -590,7 +590,7 @@
  hun_ottoman_borders_three_desc:0 "ブルガリアの人々は何年もの間、何らかの外国の占領下にあった。最初は自称ローマ帝国、そして確実に残忍な宗主国であったトルコ。彼らを解放しよう。"
  hun_ottoman_borders_four_title:0 "Push on to Constantinople"
  hun_ottoman_borders_four_desc:0 "偉大なる都市コンスタンティノープルを征服し、バルカン半島への請求権を主張せよ!"
- secure_the_imperial_crown.tooltip:1 " 人の選帝侯が：\n§Y[Root.GetName]§!が皇帝となることを支持している。\n§Y[Root.GetName]§!に対する評価が§Y100§!以上である。"
+ secure_the_imperial_crown.tooltip:1 " の選帝侯が：\n§Y[Root.GetName]§!が皇帝となることを支持している。\n§Y[Root.GetName]§!に対する評価が§Y100§!以上である。"
  building_alliances.tooltip:0 "以下に該当する国家が§Y2§!以上である：\n§Y[Root.GetName]§!と同盟を結んでいる。\n§Y[Root.GetName]§!に対する評価が§Y150§!以上である。"
  conquer_warmia_title:1 "プロイセンの奪還"
  conquer_warmia_desc:0 "プロイセンの土地は、ポーランドの王冠に従うという理解の下、チュートン騎士団によってキリスト教化された。騎士たちはこれをすぐに否定し、何百年もの月日が経ったが、我々は何をすべきかを忘れてはいない。"
