--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -819,7 +819,7 @@
  scapegoat_bribe:0 "身代わりの提示"
  REVOLUTIONARY_PEASANT_REPUBLIC:0 "農民臨時政権"
  scapegoat_bribe_aztec:0 "神々のために血を！"
- mechanic_enables_nepotism_yes:0 "統治者の家族による再選を許す"
+ mechanic_enables_nepotism_yes:0 "統治者の家族による再選を許可"
  FORCED_RANK_CHANGE_ON_ENACT:0 "§Rあなたの政府ランクは$RANK|Y$に変更されます。§!"
  carnaticmusic:0 "モンスーンの終わり"
  hindustanimusic:0 "パーニーパットの戦い"
