--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -260,7 +260,7 @@
  corruption_event.6.a:0 "調査し、すぐに置き換える。"
  corruption_event.6.b:0 "彼らを引退させよう、彼らは過去によく役立ってくれた。"
  corruption_event.7.t:0 "腐敗した顧問"
- corruption_event.7.d:1 "[Root.GetName] may be plagued by corruption, but we try to ensure that those closest to the [Root.Monarch.GetTitle] can be trusted, at the very least. Try and fail, it seems, since one of [Root.Monarch.GetName]'s advisors, [Root.GetEventAdvisorName], was recently caught taking large bribes from people already wielding great influence in our country to provide the government with advice slanted to advance their interests. How shall we respond to this betrayal?"
+ corruption_event.7.d:1 "[Root.GetName]は汚職に悩まされているかもしれないが、我々は少なくとも[Root.Monarch.GetTitle]に最も近いものが、確実に信頼できることを保証しようとしている。試したところ、[Root.Monarch.GetName]の顧問の一人である[Root.GetEventAdvisorName]が、最近政府に大きな影響を与えている人々から大きな賄賂を獲得し、政府に彼らの利益を促進するため偏向した助言を行っていた。我々はこの裏切りにどのように対応するべきだろうか？"
  corruption_event.7.a:0 "公にこれらの嘘を暴露し、処刑の準備をする。"
  corruption_event.7.b:0 "自宅に軟禁し静かな引退を手配する。"
  corruption_event.7.c:0 "戒告。偏向した助言でも助言には変わりない。"
@@ -293,7 +293,7 @@
  corruption_event.15.d:0 "腐敗した統治は、それ自体を維持するためにはあまり動かず、構成員を維持するためにより多く動く。その結果、崩壊が始まると、ほとんどの役人の即時の反応は、敗れそうな形成のもの全てを守るのではなく、続く可能性のあるものをつかむことである。\n\n[Root.GetName]は最も下位の役人から[Root.Monarch.GetTitle]に最も近い役人に至るまでの深刻な汚職がいくつかの重要な政府機能を腐食させ、国家の不安定化を広げた。我々がこの対価をすべて支払うのはまだまだ先のことである。"
  corruption_event.15.a:0 "これを継続することはできない。"
  corruption_event.16.t:0 "傭兵たちが地元民を脅迫"
- corruption_event.16.d:1 "During wartime, soldiers of fortune often find ways to make it home with a bit more than they are paid by raiding the land where they are sent to fight. Normally, this is not a problem for us when they are sent abroad to terrorize our enemies, but sometimes this habit is hard to break, even during peacetime. Some farmers and travelers in [hired_mercs_victim_area.GetAreaName] have complained that the [hired_merc_band.GetName], a mercenary band in our employ stationed there, have been robbing and extorting them, despite - or perhaps because of - the fact that there isn't even a war ongoing.\n\nMeddling in the ranks of mercenaries, even ones that we hired, is always a difficult matter. Their accusers are unlikely to take the matter further if we let it slide, but the question remains as to how our society will change if we allow such extortion to continue."
+ corruption_event.16.d:1 "傭兵たちは戦争中、報酬以外の小遣い稼ぎとして、戦地での略奪をしばしば行う。通常これは問題にはならない。彼らを敵地に送っているときは敵に恐怖を与えるからだ。しかし、彼らのこの悪習は止みがたく、時には平時でも犯すことがある。[hired_mercs_victim_area.GetAreaName]の農民や旅行者たちからの訴えによれば、我らが雇用してここに駐屯している傭兵団の[hired_merc_band.GetName]が、戦争中ではないにもかかわらず、あるいはむしろそのせいかもしれないが、強奪や強請りをしているという。\n\n傭兵連中との交渉は、我らが雇用したものであっても、常に厄介な問題である。この件に目をつぶった場合、訴えてきた者たちがこれ以上ことを大きくすることはないだろうが、このような強請り集りを許していては、社会にどんな影響があるかという疑念は残る。"
  corruption_event.16.a:0 "そのような凶悪な傭兵階級を追放する。"
  corruption_event.16.b:0 "それは我が国が彼らの奉仕に支払う対価の一部だ。"
  corruption_event.17.t:0 "無能な統治者"
@@ -379,7 +379,7 @@
  refused_to_take_sides:0 "味方することを拒否した"
  allowed_papal_league_advisor:0 "同盟において教皇顧問を許可した"
  espionage_events.1.t:0 "忠誠を半分に、諜報員を2倍に"
- espionage_events.1.d:1 "Espionage may be the hardest test there is for loyalty to one's country. Both fear and temptations surround spies constantly, and the better they are at what they do, the more certain they are to face them. These temptations, of course, are something we are more than willing to provide foreign agents.\n\nAn agent from [espionage_event_country.GetUsableName], a country where corruption is rampant, has recently decided to give in to one of these temptations. Eager to make a bigger profit than most can hope to earn through bribes, he has offered to act as a double agent for us. However, the 'anonymous' method of contact he chose has turned out to be less anonymous than expected, so we now know his name. How shall we proceed?"
+ espionage_events.1.d:1 "諜報機関は、自分の国への忠誠心のための最も難しい試験かもしれない。恐怖と誘惑の両方が絶えず諜報員を取り囲み、彼らがしていることが上手くなるほど、彼らはより確実にそれに直面することになる。これらの誘惑はもちろん、外国人の諜報員が喜んで提供するものである。\n\n最近、汚職が蔓延している国である[espionage_event_country.GetUsableName]の諜報員は、これらの誘惑の一つに屈することを決断した。ほとんどの人が賄賂を通じて得ることができるよりも大きな利益を得ることを熱望している彼は、我々のために二重の諜報員として行動することを提案している。しかし、彼が選んだ「匿名の」連絡方法は、予想以上に匿名ではないことが判明したため、今では我々は彼の名前を知っている。我々はどう進めていくべきだろうか？"
  espionage_events.1.a:0 "より少ない金額で提案を受け入れ、彼の命を助ける。"
  espionage_events.1.b:0 "彼が事故に遭うまで、数日間彼を尾行しろ。"
  espionage_events.2.t:0 "裏切り者のための二度目の機会"
